--- a/workflows/Invia rapportino via email.json
+++ b/workflows/Invia rapportino via email.json
@@ -1,5 +1,5 @@
 {
-  "active": false,
+  "active": true,
   "connections": {
     "Webhook": {
       "main": [
@@ -16,7 +16,7 @@
       "main": [
         [
           {
-            "node": "dati cliente",
+            "node": "dati rapportino",
             "type": "main",
             "index": 0
           }
@@ -30,6 +30,11 @@
             "node": "Microsoft Outlook",
             "type": "main",
             "index": 0
+          },
+          {
+            "node": "Notifico tecnico",
+            "type": "main",
+            "index": 0
           }
         ]
       ]
@@ -39,6 +44,17 @@
         [
           {
             "node": "GET PDF",
+            "type": "main",
+            "index": 0
+          }
+        ]
+      ]
+    },
+    "dati rapportino": {
+      "main": [
+        [
+          {
+            "node": "dati cliente",
             "type": "main",
             "index": 0
           }
@@ -84,7 +100,7 @@
       "type": "n8n-nodes-base.crypto",
       "typeVersion": 1,
       "position": [
-        380,
+        340,
         340
       ]
     },
@@ -92,7 +108,7 @@
       "parameters": {
         "toRecipients": "={{ $('dati cliente').item.json[\"data\"][\"rapportiniMailNotifica\"] }}",
         "subject": "=Rapportino {{ $('Webhook').item.json[\"query\"][\"idRapportino\"] }}",
-        "bodyContent": "=In allegato il rapportino {{ $('Webhook').item.json[\"query\"][\"idRapportino\"] }}",
+        "bodyContent": "=<!DOCTYPE html PUBLIC \"-//W3C//DTD XHTML 1.0 Strict//EN\" \"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd\">\n<html>\n  <head>\n    <!-- Compiled with Bootstrap Email version: 1.4.0 --><meta http-equiv=\"x-ua-compatible\" content=\"ie=edge\">\n    <meta name=\"x-apple-disable-message-reformatting\">\n    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1\">\n    <meta name=\"format-detection\" content=\"telephone=no, date=no, address=no, email=no\">\n    <meta http-equiv=\"Content-Type\" content=\"text/html; charset=utf-8\">\n    <style type=\"text/css\">\n      body,table,td{font-family:Helvetica,Arial,sans-serif !important}.ExternalClass{width:100%}.ExternalClass,.ExternalClass p,.ExternalClass span,.ExternalClass font,.ExternalClass td,.ExternalClass div{line-height:150%}a{text-decoration:none}*{color:inherit}a[x-apple-data-detectors],u+#body a,#MessageViewBody a{color:inherit;text-decoration:none;font-size:inherit;font-family:inherit;font-weight:inherit;line-height:inherit}img{-ms-interpolation-mode:bicubic}table:not([class^=s-]){font-family:Helvetica,Arial,sans-serif;mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;border-collapse:collapse}table:not([class^=s-]) td{border-spacing:0px;border-collapse:collapse}@media screen and (max-width: 600px){.w-full,.w-full>tbody>tr>td{width:100% !important}*[class*=s-lg-]>tbody>tr>td{font-size:0 !important;line-height:0 !important;height:0 !important}.s-3>tbody>tr>td{font-size:12px !important;line-height:12px !important;height:12px !important}.s-5>tbody>tr>td{font-size:20px !important;line-height:20px !important;height:20px !important}.s-10>tbody>tr>td{font-size:40px !important;line-height:40px !important;height:40px !important}}\n    </style>\n  </head>\n  <body class=\"bg-light\" style=\"outline: 0; width: 100%; min-width: 100%; height: 100%; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; font-family: Helvetica, Arial, sans-serif; line-height: 24px; font-weight: normal; font-size: 16px; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; color: #000000; margin: 0; padding: 0; border-width: 0;\" bgcolor=\"#f7fafc\">\n    <table class=\"bg-light body\" valign=\"top\" role=\"presentation\" border=\"0\" cellpadding=\"0\" cellspacing=\"0\" style=\"outline: 0; width: 100%; min-width: 100%; height: 100%; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; font-family: Helvetica, Arial, sans-serif; line-height: 24px; font-weight: normal; font-size: 16px; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; color: #000000; margin: 0; padding: 0; border-width: 0;\" bgcolor=\"#f7fafc\">\n      <tbody>\n        <tr>\n          <td valign=\"top\" style=\"line-height: 24px; font-size: 16px; margin: 0;\" align=\"left\" bgcolor=\"#f7fafc\">\n            <table class=\"container\" role=\"presentation\" border=\"0\" cellpadding=\"0\" cellspacing=\"0\" style=\"width: 100%;\">\n              <tbody>\n                <tr>\n                  <td align=\"center\" style=\"line-height: 24px; font-size: 16px; margin: 0; padding: 0 16px;\">\n                    <!--[if (gte mso 9)|(IE)]>\n                      <table align=\"center\" role=\"presentation\">\n                        <tbody>\n                          <tr>\n                            <td width=\"600\">\n                    <![endif]-->\n                    <table align=\"center\" role=\"presentation\" border=\"0\" cellpadding=\"0\" cellspacing=\"0\" style=\"width: 100%; max-width: 600px; margin: 0 auto;\">\n                      <tbody>\n                        <tr>\n                          <td style=\"line-height: 24px; font-size: 16px; margin: 0;\" align=\"left\">\n                            <table class=\"s-10 w-full\" role=\"presentation\" border=\"0\" cellpadding=\"0\" cellspacing=\"0\" style=\"width: 100%;\" width=\"100%\">\n                              <tbody>\n                                <tr>\n                                  <td style=\"line-height: 40px; font-size: 40px; width: 100%; height: 40px; margin: 0;\" align=\"left\" width=\"100%\" height=\"40\">\n                                    &#160;\n                                  </td>\n                                </tr>\n                              </tbody>\n                            </table>\n                            <table class=\"card\" role=\"presentation\" border=\"0\" cellpadding=\"0\" cellspacing=\"0\" style=\"border-radius: 6px; border-collapse: separate !important; width: 100%; overflow: hidden; border: 1px solid #e2e8f0;\" bgcolor=\"#ffffff\">\n                              <tbody>\n                                <tr>\n                                  <td style=\"line-height: 24px; font-size: 16px; width: 100%; margin: 0;\" align=\"left\" bgcolor=\"#ffffff\">\n                                    <table class=\"card-body\" role=\"presentation\" border=\"0\" cellpadding=\"0\" cellspacing=\"0\" style=\"width: 100%;\">\n                                      <tbody>\n                                        <tr>\n                                          <td style=\"line-height: 24px; font-size: 16px; width: 100%; margin: 0; padding: 20px;\" align=\"left\">\n                                            <img class=\"image\" src=\"https://ntgestionale-public.ntcloud.it/LogoNetTarget-h250px.png\" width=\"50%\" style=\"margin-bottom: 1rem; height: auto; line-height: 100%; outline: none; text-decoration: none; display: block; border-style: none; border-width: 0;\">\n                                            <h5 class=\"text-teal-700\" style=\"color: #13795b; padding-top: 0; padding-bottom: 0; font-weight: 500; vertical-align: baseline; font-size: 20px; line-height: 24px; margin: 0;\" align=\"left\">Rapportino di lavoro {{ $('dati rapportino').item.json[\"rapportino\"][\"id\"] }} - {{ $('dati rapportino').item.json[\"rapportino\"][\"dataScritta\"] }}</h5>\n                                            <table class=\"s-5 w-full\" role=\"presentation\" border=\"0\" cellpadding=\"0\" cellspacing=\"0\" style=\"width: 100%;\" width=\"100%\">\n                                              <tbody>\n                                                <tr>\n                                                  <td style=\"line-height: 20px; font-size: 20px; width: 100%; height: 20px; margin: 0;\" align=\"left\" width=\"100%\" height=\"20\">\n                                                    &#160;\n                                                  </td>\n                                                </tr>\n                                              </tbody>\n                                            </table>\n                                            <table class=\"hr\" role=\"presentation\" border=\"0\" cellpadding=\"0\" cellspacing=\"0\" style=\"width: 100%;\">\n                                              <tbody>\n                                                <tr>\n                                                  <td style=\"line-height: 24px; font-size: 16px; border-top-width: 1px; border-top-color: #e2e8f0; border-top-style: solid; height: 1px; width: 100%; margin: 0;\" align=\"left\">\n                                                  </td>\n                                                </tr>\n                                              </tbody>\n                                            </table>\n                                            <table class=\"s-5 w-full\" role=\"presentation\" border=\"0\" cellpadding=\"0\" cellspacing=\"0\" style=\"width: 100%;\" width=\"100%\">\n                                              <tbody>\n                                                <tr>\n                                                  <td style=\"line-height: 20px; font-size: 20px; width: 100%; height: 20px; margin: 0;\" align=\"left\" width=\"100%\" height=\"20\">\n                                                    &#160;\n                                                  </td>\n                                                </tr>\n                                              </tbody>\n                                            </table>\n                                            <div class=\"space-y-3\">\n                                              <p class=\"text-gray-800\" style=\"line-height: 24px; font-size: 16px; color: #2d3748; width: 100%; margin: 0;\" align=\"left\">\n                                                Buongiorno,<br>\n                                                in allegato la copia del rapportino <b>{{ $('dati rapportino').item.json[\"rapportino\"][\"id\"] }}</b> per le attivit&#224; eseguite in data <b>{{ $('dati rapportino').item.json[\"rapportino\"][\"dataScritta\"] }}</b> dal tecnico <b>{{ $('dati rapportino').item.json[\"rapportino\"][\"tecnicoNome\"] }}</b>.\n                                              </p>\n                                              <table class=\"s-3 w-full\" role=\"presentation\" border=\"0\" cellpadding=\"0\" cellspacing=\"0\" style=\"width: 100%;\" width=\"100%\">\n                                                <tbody>\n                                                  <tr>\n                                                    <td style=\"line-height: 12px; font-size: 12px; width: 100%; height: 12px; margin: 0;\" align=\"left\" width=\"100%\" height=\"12\">\n                                                      &#160;\n                                                    </td>\n                                                  </tr>\n                                                </tbody>\n                                              </table>\n                                            </div>\n                                            <table class=\"s-5 w-full\" role=\"presentation\" border=\"0\" cellpadding=\"0\" cellspacing=\"0\" style=\"width: 100%;\" width=\"100%\">\n                                              <tbody>\n                                                <tr>\n                                                  <td style=\"line-height: 20px; font-size: 20px; width: 100%; height: 20px; margin: 0;\" align=\"left\" width=\"100%\" height=\"20\">\n                                                    &#160;\n                                                  </td>\n                                                </tr>\n                                              </tbody>\n                                            </table>\n                                            <table class=\"hr\" role=\"presentation\" border=\"0\" cellpadding=\"0\" cellspacing=\"0\" style=\"width: 100%;\">\n                                              <tbody>\n                                                <tr>\n                                                  <td style=\"line-height: 24px; font-size: 16px; border-top-width: 1px; border-top-color: #e2e8f0; border-top-style: solid; height: 1px; width: 100%; margin: 0;\" align=\"left\">\n                                                  </td>\n                                                </tr>\n                                              </tbody>\n                                            </table>\n                                            <table class=\"s-5 w-full\" role=\"presentation\" border=\"0\" cellpadding=\"0\" cellspacing=\"0\" style=\"width: 100%;\" width=\"100%\">\n                                              <tbody>\n                                                <tr>\n                                                  <td style=\"line-height: 20px; font-size: 20px; width: 100%; height: 20px; margin: 0;\" align=\"left\" width=\"100%\" height=\"20\">\n                                                    &#160;\n                                                  </td>\n                                                </tr>\n                                              </tbody>\n                                            </table>\n                                            <p class=\"text-gray-800\" style=\"line-height: 24px; font-size: 16px; color: #2d3748; width: 100%; margin: 0;\" align=\"left\">Le auguriamo buona giornata,<br>\n                                              <b>Net Target SRL</b></p>\n                                          </td>\n                                        </tr>\n                                      </tbody>\n                                    </table>\n                                  </td>\n                                </tr>\n                              </tbody>\n                            </table>\n                            <table class=\"s-10 w-full\" role=\"presentation\" border=\"0\" cellpadding=\"0\" cellspacing=\"0\" style=\"width: 100%;\" width=\"100%\">\n                              <tbody>\n                                <tr>\n                                  <td style=\"line-height: 40px; font-size: 40px; width: 100%; height: 40px; margin: 0;\" align=\"left\" width=\"100%\" height=\"40\">\n                                    &#160;\n                                  </td>\n                                </tr>\n                              </tbody>\n                            </table>\n                            <p class=\"text-gray-500 text-center\" style=\"font-size: 8pt; line-height: 24px; color: #a0aec0; width: 100%; margin: 0;\" align=\"center\"><small>Questa &#232; una mail automatica inviata dal gestionale NTG</small></p>\n                          </td>\n                        </tr>\n                      </tbody>\n                    </table>\n                    <!--[if (gte mso 9)|(IE)]>\n                    </td>\n                  </tr>\n                </tbody>\n              </table>\n                    <![endif]-->\n                  </td>\n                </tr>\n              </tbody>\n            </table>\n          </td>\n        </tr>\n      </tbody>\n    </table>\n  </body>\n</html>\n",
         "additionalFields": {
           "attachments": {
             "attachments": [
@@ -100,7 +116,9 @@
                 "binaryPropertyName": "=data"
               }
             ]
-          }
+          },
+          "from": "Gestionale Net Target <gestionale@net-target.it>",
+          "bodyContentType": "html"
         }
       },
       "id": "792958a4-a224-4f5d-8713-c1283b625057",
@@ -108,8 +126,8 @@
       "type": "n8n-nodes-base.microsoftOutlook",
       "typeVersion": 2,
       "position": [
-        1100,
-        340
+        1540,
+        200
       ],
       "credentials": {
         "microsoftOutlookOAuth2Api": {
@@ -120,7 +138,7 @@
     },
     {
       "parameters": {
-        "url": "=https://noauth.ntcloud.it/print.php?idRapportino={{ $('Webhook').item.json[\"query\"][\"idRapportino\"] }}&token={{ $('Webhook').item.json[\"query\"][\"token\"] }}",
+        "url": "=https://noauth.ntcloud.it/print.php?idRapportino={{ $('dati rapportino').item.json[\"rapportino\"][\"id\"] }}&token={{ $('dati rapportino').item.json[\"rapportino\"][\"token\"] }}",
         "options": {}
       },
       "id": "4a68e13b-9d23-48f9-b591-9a4dd15898af",
@@ -128,13 +146,36 @@
       "type": "n8n-nodes-base.httpRequest",
       "typeVersion": 4.1,
       "position": [
-        860,
+        980,
         340
       ]
     },
     {
       "parameters": {
-        "url": "=https://gestionale.ntcloud.it/clienti/get.php?id={{ $json.query.idCliente }}",
+        "url": "=https://gestionale.ntcloud.it/clienti/get.php?id={{ $json.rapportino.idCliente }}",
+        "sendHeaders": true,
+        "headerParameters": {
+          "parameters": [
+            {
+              "name": "token",
+              "value": "=_service:{{ $('Crypto').item.json[\"data\"] }}"
+            }
+          ]
+        },
+        "options": {}
+      },
+      "id": "ad3cc118-912a-47fe-90de-2e9c1817c846",
+      "name": "dati cliente",
+      "type": "n8n-nodes-base.httpRequest",
+      "typeVersion": 4.1,
+      "position": [
+        760,
+        340
+      ]
+    },
+    {
+      "parameters": {
+        "url": "=https://gestionale.ntcloud.it/rapportini/get.php?idRapportino={{ $json.query.idRapportino }}",
         "sendHeaders": true,
         "headerParameters": {
           "parameters": [
@@ -146,14 +187,44 @@
         },
         "options": {}
       },
-      "id": "ad3cc118-912a-47fe-90de-2e9c1817c846",
-      "name": "dati cliente",
+      "id": "e8efd6fe-1e5f-449d-b1e3-02ad592583fc",
+      "name": "dati rapportino",
       "type": "n8n-nodes-base.httpRequest",
       "typeVersion": 4.1,
       "position": [
-        640,
+        540,
         340
       ]
+    },
+    {
+      "parameters": {
+        "toRecipients": "={{ $('dati rapportino').item.json[\"rapportino\"][\"tecnicoUtente\"] }}",
+        "subject": "=Inviato rapportino {{ $('dati rapportino').item.json[\"rapportino\"][\"id\"] }}",
+        "bodyContent": "=Cliente: {{ $('dati rapportino').item.json[\"rapportino\"][\"nomeCliente\"] }}\nIndirizzo: {{ $('dati cliente').item.json[\"data\"][\"rapportiniMailNotifica\"] }}",
+        "additionalFields": {
+          "attachments": {
+            "attachments": [
+              {
+                "binaryPropertyName": "data"
+              }
+            ]
+          }
+        }
+      },
+      "id": "1fe42bc5-f115-458c-8a3d-456d59bd7ba2",
+      "name": "Notifico tecnico",
+      "type": "n8n-nodes-base.microsoftOutlook",
+      "typeVersion": 2,
+      "position": [
+        1380,
+        480
+      ],
+      "credentials": {
+        "microsoftOutlookOAuth2Api": {
+          "id": "uQ4EvYpbYU7cTQq2",
+          "name": "gestionale@net-target.it"
+        }
+      }
     }
   ],
   "pinData": {},
@@ -162,7 +233,7 @@
   },
   "staticData": null,
   "tags": [],
-  "triggerCount": 0,
-  "updatedAt": "2024-01-03T17:43:34.000Z",
-  "versionId": "891ae03f-10eb-47d8-a019-414d99dfd992"
+  "triggerCount": 1,
+  "updatedAt": "2024-01-04T17:41:06.000Z",
+  "versionId": "0184335c-b8bd-43fc-a136-dc7d1ac9a0f7"
 }
